# llm-android

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/example/gemma/: ChatMessage.kt  ChatScreen.kt  ChatSettings.kt  ChatUiState.kt  ChatViewModel.kt  DownloadScreen.kt  InferenceModel.kt  LlamaModel.kt  MainActivity.kt  ModelDownloader.kt  ModelSelectScreen.kt  SettingsScreen.kt
app/src/main/java/com/example/gemma/ui/theme/: Color.kt  Theme.kt  Type.kt
